# mohirdev-culon

./: .gitignore  README.md  gravity.md  main.py  manager.py  pyproject.toml
apps/accounts/: admin.py  auth_classes.py  choices.py  models.py  signals.py  tasks.py  urls.py  utils.py  views.py
apps/accounts/migrations/: 0001_initial.py  0002_initial.py  0003_author_is_active_author_is_deleted.py  0004_wallet.py
apps/accounts/serializers/: __init__.py  auth.py  author.py  education.py
apps/accounts/views/: __init__.py  auth.py  author_crud.py  education_crud.py
apps/common/: admin.py  models.py  tasks.py  urls.py
apps/common/apis/: __init__.py  serializers.py  views.py
apps/common/migrations/: 0001_initial.py  0002_remove_media_file_url_media_file_region_country.py  0003_rename_file_media_file_url.py
apps/common/serializers/: __init__.py  country_region.py  file_upload.py
apps/common/views/: __init__.py  country_region.py  file_upload.py  test_task.py
apps/courses/: admin.py  models.py  translation.py  urls.py
apps/courses/migrations/: 0001_initial.py  0002_category_name_en_category_name_ru_category_name_uz.py  0003_course_name_en_course_name_ru_course_name_uz_and_more.py
apps/enrollments/: admin.py  models.py
apps/interactions/: models.py  tasks.py
apps/lessons/: admin.py  models.py
apps/media/: admin.py  models.py
apps/payments/: admin.py  choices.py  models.py
apps/users/: admin.py  models.py
config/: celery.py  jazzmin.py  settings.py  urls.py
docs/: plan.md
fakepay/: main.py  pyproject.toml
templates/: home.html
(+25 files in other folders)
